feat: 新增取得特定的會員資訊功能
